Style and blockouts

--- a/Examples/circleCard/.tmp/drop/visual.css
+++ b/Examples/circleCard/.tmp/drop/visual.css
@@ -6,6 +6,9 @@ p em {
   background: yellow;
   padding: 5px;
 }
+.container-div {
+  background: aqua;
+}
 
 
 /*# sourceMappingURL=https://localhost:8080/assets/visual.css.map*/
