--- a/Examples/circleCard/style/visual.less
+++ b/Examples/circleCard/style/visual.less
@@ -1,9 +1,14 @@
 p {
     font-size: 20px;
     font-weight: bold;
+
     em {
         background: yellow;
         padding: 5px;
-        
+
     }
+}
+
+.container-div {
+    background: aqua;
 }
