--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -32,13 +32,13 @@ body {
 }
 /* -------- DIV -------- */
 div {
-  /* border: 1px dashed black; */
+  border: 1px dashed black;
   padding: 0px;
   margin: 0px;
+  width: 100%;
 }
 #div-header {
-  height: 10%;
-  min-height: 15px;
+  min-height: 30px;
   border-style: none none solid none;
   border-width: 1px;
   border-color: black;
@@ -46,38 +46,44 @@ div {
 #div-content {
   height: fit-content;
   display: flex;
-  min-height: 185px;
+  justify-content: flex-end;
 }
 #div-tasks {
   width: 25%;
 }
 #div-chartContainer {
   flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
   border-style: none none none solid;
   border-width: 2px;
   border-color: black;
+  height: 500px;
+}
+.gridStack {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+#div-structureLayer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+}
+#div-svgLayer {
+  height: 100%;
+  z-index: 1;
 }
 #div-timeline {
   height: var(--timelineHeight);
 }
 #div-chart {
-  height: auto;
+  height: fit-content;
+  min-height: 150px;
   flex-grow: 1;
   position: relative;
-}
-#overlay {
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0);
-  z-index: 2;
 }
 /* ------- TABLE ------- */
 table {
@@ -96,6 +102,15 @@ td {
 /* #table-ganttGrid{
 
 } */
+/* ------- TIMELINE ------- */
+#svg-statusLine {
+  z-index: 3;
+}
+#statusLine {
+  stroke: #ff0000;
+  stroke-width: 2px;
+}
+/* ------- DEBUG ------- */
 .highlight {
   border: 1px solid #00ff00;
   background-color: rgba(0, 255, 0, 0.25);
