--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -14,14 +14,17 @@
 body {
     line-height: 1;
 }
+
 ol,
 ul {
     list-style: none;
 }
+
 blockquote,
 q {
     quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -29,6 +32,7 @@ q:after {
     content: '';
     content: none;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -44,15 +48,15 @@ body {
 /* -------- DIV -------- */
 
 div {
-    border: 1px dashed black;
     padding: 0px;
     margin: 0px;
     width: 100%;
+
+    border: 1px dashed black;
 }
 
 //div for the header of the graph: title, logo etc.
 #div-header {
-    // height: 10%;
     min-height: 30px;
 
     border-style: none none solid none;
@@ -62,65 +66,66 @@ div {
 
 //div that handles the overlapping of the content and status line. Grid.
 #div-statusAndContent {
+    height: fit-content;
+
     display: grid;
     grid-template-columns: calc(100fr - var(--chartPortionFr)) var(--chartPortionFr);
     //grid-template-rows: 1fr 1fr;
-
-    height: fit-content;
 }
 
 //div for the task headers and timeline
-#div-timelineAndTasksHeader {
+#div-timelineAndActivitiesHeader {
     height: fit-content;
-    display: flex;
 
     grid-row-start: 1;
-    grid-column-start: 1;
     grid-row-end: span 1;
+    grid-column-start: 1;
     grid-column-end: span 2;
+
+    display: flex;
 }
 
 //the div below the above div that contains the tasks table and gantt
 #div-content {
     height: fit-content;
-    display: flex;
-    justify-content: flex-end;
 
     grid-row-start: 2;
-    grid-column-start: 1;
     grid-row-end: span 1;
+    grid-column-start: 1;
     grid-column-end: span 2;
+
+    display: flex;
+    justify-content: flex-end;
 }
 
 
 //div that contains the status line and accompanying text.
 //Overlaps gantt and timeline but is one level up in the DOM heirachy,
 #div-statusLine {
-    grid-row-start: 1;
-    grid-column-start: 2;
-    grid-row-end: span 2;
-    grid-column-end: span 1;
-
     height: 100%;
     z-index: 1;
-
+    
+    grid-row-start: 1;
+    grid-row-end: span 2;
+    grid-column-start: 2;
+    grid-column-end: span 1;
 }
 
-#div-tasks {
+#div-activities {
     width: 25%;
     flex-shrink: 0;
+    overflow-x: scroll;
 }
 
 #div-chartContainer {
-    width:var(--chartPortionPct);
-
-    display: grid;
-    grid-template-columns: 1fr;
+    width: var(--chartPortionPct);
+    height: fit-content;
     border-style: none none none solid;
     border-width: 2px;
     border-color: black;
 
-    height: 500px;
+    display: grid;
+    grid-template-columns: 1fr;   
 }
 
 //https://ishadeed.com/article/less-absolute-positioning-modern-css/
@@ -139,7 +144,6 @@ div {
     height: 100%;
     display: flex;
     flex-direction: column;
-    height: fit-content;
 }
 
 #div-svgLayer {
@@ -163,12 +167,12 @@ div {
 
 #div-timeline {
     height: var(--timelineHeight);
-
 }
 
 #div-chart {
     height: fit-content;
     min-height: 150px;
+
     flex-grow: 1;
     position: relative;
 }
@@ -180,6 +184,7 @@ table {
     border: 1px solid blue;
 }
 
+
 th {
     height: var(--timelineHeight);
 }
@@ -189,6 +194,8 @@ tr {
 }
 
 td {
+    min-width: 40px;
+    
     border: 1px #aaaaaa;
     border-style: solid none solid solid;
 }
@@ -208,11 +215,9 @@ td {
     stroke-width: 2px;
 }
 
-
-
 /* ------- DEBUG ------- */
 
 .highlight {
-    border: 1px solid #00ff00;
     background-color: rgba(0, 255, 0, 0.25);
+    border: 1px solid #00ff00;
 }
