--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -52,7 +52,7 @@ div {
     margin: 0px;
     width: 100%;
 
-    border: 1px dashed black;
+    //border: 1px dashed black;
 }
 
 //div for the header of the graph: title, logo etc.
@@ -165,7 +165,6 @@ div {
 //     z-index: 2;
 // }
 
-
 #div-timeline {
     height: 100%;
 
@@ -217,6 +216,10 @@ td {
     stroke: rgb(255, 0, 0);
     stroke-width: 2px;
 }
+
+/* ------- CHART ------- */
+
+
 
 /* ------- DEBUG ------- */
 
