Time.ts dev and unit test init

--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -108,8 +108,8 @@ div {
 #div-timeline {
   height: 100%;
   width: 75%;
-  overflow-x: visible;
-  overflow-y: visible;
+  overflow-x: scroll;
+  overflow-y: clip;
 }
 #div-chart {
   height: fit-content;
