--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -172,8 +172,8 @@ div {
     height: 100%;
 
     width: 75%;
-    overflow-x: visible;
-    overflow-y: visible;
+    overflow-x: scroll;
+    overflow-y: clip;
 }
 
 #div-chart {
