--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -163,6 +163,12 @@ td {
   background-color: rgba(0, 255, 0, 0.25);
   border: 1px solid #00ff00;
 }
+.style1 {
+  padding-left: 0px;
+}
+.style2 {
+  padding-left: 5px;
+}
 
 
 /*# sourceMappingURL=https://localhost:8080/assets/visual.css.map*/
