--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -249,3 +249,11 @@ td {
     background-color: rgba(0, 255, 0, 0.25);
     border: 1px solid #00ff00;
 }
+
+.style1{
+    padding-left: 0px;
+}
+
+.style2{
+    padding-left: 5px;
+}
