Alignment and padding of Year and Month Separators

--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -167,6 +167,9 @@ td {
 .g-tl {
   border: 1px solid black;
 }
+monthText {
+  text-anchor: middle ;
+}
 /* ------- CHART ------- */
 .activityBar {
   fill: red;
