Needs div structure redo

--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -86,16 +86,14 @@ div {
 #div-statusLine {
   height: 100%;
   z-index: 1;
-  grid-row-start: 1;
-  grid-row-end: span 2;
-  grid-column-start: 2;
-  grid-column-end: span 1;
   pointer-events: none;
 }
 #div-activities {
   width: 25%;
   flex-shrink: 0;
   overflow-x: scroll;
+  overflow-y: scroll;
+  height: 100%;
 }
 #div-chartContainer {
   width: var(--chartPortionPct);
@@ -127,6 +125,7 @@ div {
 }
 #div-timeline {
   height: 100%;
+  border-bottom: 1px gray;
   width: 75%;
   overflow-x: scroll;
   overflow-y: clip;
