Render bars based on date

--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -150,8 +150,12 @@ td {
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
+  border: none;
 }
 ::-webkit-scrollbar-track {
+  background: var(--tbh-blue-background);
+}
+::-webkit-scrollbar-corner {
   background: var(--tbh-blue-background);
 }
 ::-webkit-scrollbar-thumb {
