--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -216,10 +216,16 @@ td {
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
+    border: none;
 }
 
 ::-webkit-scrollbar-track {
     background: var(--tbh-blue-background);
+}
+
+::-webkit-scrollbar-corner {
+    background: var(--tbh-blue-background);
+    
 }
 
 ::-webkit-scrollbar-thumb {
