Dataview to bars functional

--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -94,7 +94,7 @@ div {
 
 //the div below the above div that contains the activitys table and gantt
 #div-content {
-    height: fit-content;
+    height: 100%;
     width:100%;
     display: flex;
 }
