--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -8,6 +8,7 @@
   --tbh-blue-background: #232d40;
   --tbh-blue1: #19808f;
   --tbh-blue2: #09343f;
+  --headerheight: 50px;
 }
 /*begin css reset*/
 body {
@@ -49,9 +50,17 @@ h4 {
 div {
   padding: 0px;
   margin: 0px;
+  height: 100%;
+}
+#sandbox-host {
+  display: flex;
+  flex-direction: column;
+}
+#div-sizeControllerWorkaround {
+  height: 100%;
 }
 #div-header {
-  min-height: 50px;
+  height: var(--headerheight);
   border-style: none none solid none;
   border-width: 1px;
   border-color: black;
@@ -59,14 +68,12 @@ div {
   color: white;
   position: relative;
   padding: 10px;
+  flex-shrink: 0;
 }
 #div-content {
-  height: fit-content;
-}
-#div-content {
-  height: 100%;
   width: 100%;
   display: flex;
+  min-height: 0;
 }
 #div-statusLine {
   height: 100%;
@@ -143,13 +150,12 @@ td {
 }
 /* ------- CHART ------- */
 .activityBar {
-  fill: red;
   stroke: black;
   stroke-width: 1px;
 }
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   border: none;
 }
 ::-webkit-scrollbar-track {
