--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -159,8 +159,7 @@ div {
 /* ------- TABLE ------- */
 
 table {
-    width: 100%;
-    border: 1px solid blue;
+    width: fit-content;
 }
 
 #table-activityHeader {
@@ -171,7 +170,7 @@ table {
 
 th {
     height: var(--timelineHeight);
-    ;
+    padding:0;
 }
 
 tr {
@@ -179,10 +178,36 @@ tr {
 }
 
 td {
-    min-width: 40px;
+    width: fit-content;
 
     border: 1px #aaaaaa;
     border-style: solid none solid solid;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.td-name{
+    
+}
+
+.indent0{
+    font-weight:bold;
+    padding-left: 0px;
+}
+
+.indent1{
+    font-weight:bold;
+    padding-left: 25px;
+}
+
+.indent2{
+    font-weight:normal;
+    padding-left: 50px;
+}
+
+.indent3{
+    font-weight:normal;
+    padding-left: 75px;
 }
 
 /* #table-ganttGrid{
