--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -165,7 +165,6 @@ table {
 #table-activityHeader {
     width: 25%;
     color: #bbbbbb;
-    flex-shrink: 0
 }
 
 th {
@@ -216,10 +215,6 @@ td {
 
 /* ------- TIMELINE ------- */
 
-//check these
-#svg-statusLine {
-    z-index: 3;
-}
 
 #statusLine {
     stroke: rgb(0, 255, 255);
@@ -249,6 +244,13 @@ td {
     stroke-width: 1px;
 }
 
+//check these
+#svg-statusLine {
+    z-index: 3;
+}
+
+
+/* ------- SCROLLBAR ------- */
 
 ::-webkit-scrollbar {
     width: 20px;
@@ -279,12 +281,4 @@ td {
 .highlight {
     background-color: rgba(0, 255, 0, 0.25);
     border: 1px solid #00ff00;
-}
-
-.style1 {
-    padding-left: 0px;
-}
-
-.style2 {
-    padding-left: 5px;
 }
