--- a/tbhGanttVisual/style/visual.less
+++ b/tbhGanttVisual/style/visual.less
@@ -190,24 +190,24 @@ td {
 }
 
 .indent0{
-    font-weight:bold;
     padding-left: 0px;
 }
 
 .indent1{
-    font-weight:bold;
     padding-left: 25px;
 }
 
 .indent2{
-    font-weight:normal;
     padding-left: 50px;
 }
 
 .indent3{
-    font-weight:normal;
     padding-left: 75px;
 }
+.indent4{
+    padding-left: 100px;
+}
+
 
 /* #table-ganttGrid{
 
