--- a/tbhGanttVisual/.tmp/drop/visual.css
+++ b/tbhGanttVisual/.tmp/drop/visual.css
@@ -130,20 +130,19 @@ td {
   overflow: hidden;
 }
 .indent0 {
-  font-weight: bold;
   padding-left: 0px;
 }
 .indent1 {
-  font-weight: bold;
   padding-left: 25px;
 }
 .indent2 {
-  font-weight: normal;
   padding-left: 50px;
 }
 .indent3 {
-  font-weight: normal;
   padding-left: 75px;
+}
+.indent4 {
+  padding-left: 100px;
 }
 /* #table-ganttGrid{
 
